# trezor-firmware

ci/: build.yml  test.yml
common/defs/misc/: misc.json
common/protob/: Makefile  messages-management.proto  messages-mobilecoin.proto  messages.proto
core/: SConscript.firmware  SConscript.unix
core/embed/extmod/modtrezorcrypto/: modtrezorcrypto-bip32.h  modtrezorcrypto-curve25519.h  modtrezorcrypto-ed25519.h  modtrezorcrypto-mobilecoin.h  modtrezorcrypto-monero.h  modtrezorcrypto.c
core/embed/firmware/: memory_T.ld
core/embed/rust/: Cargo.toml
core/embed/rust/src/: lib.rs
core/embed/rust/src/micropython/: buffer.rs
core/embed/rust/src/ui/: geometry.rs
core/embed/rust/src/ui/model_tt/: layout.rs  theme.rs
core/embed/rust/src/ui/model_tt/component/keyboard/: pin.rs
core/embed/trezorhal/: image.c
core/src/: all_modules.py  all_modules.py.mako
core/src/apps/: base.py  workflow_handlers.py
core/src/apps/ethereum/: verify_message.py
core/src/trezor/: loop.py  messages.py
core/tests/: test_apps.mobilecoin.base.py  test_apps.nem.hdnode.py  test_trezor.crypto.mobilecoin.py
crypto/: Makefile  bip32.c  nem.c  trezor-crypto-ge.h  trezor-crypto.h
crypto/ed25519-donna/: ed25519-donna-impl-base.h  ed25519-keccak.h  ed25519-sha3.h  ed25519.h  modm-donna-32bit.h
crypto/fuzzer/: fuzzer.c
crypto/monero/: xmr.c
crypto/tests/: test_check.c  test_speed.c
docs/ci/: jobs.md
python/src/trezorlib/: messages.py
tests/device_tests/bitcoin/: test_authorize_coinjoin.py  test_signtx_external.py  test_signtx_segwit.py
tests/ui_tests/: fixtures.json
(+13 files in other folders)
