[package]
name = "trezor_lib"
version = "0.1.0"
authors = ["SatoshiLabs <info@satoshilabs.com>"]
edition = "2021"
build = "build.rs"

[features]
default = ["model_tt"]
bitcoin_only = []
model_tt = []
model_t1 = []
model_tr = []
ui = []
ui_debug = []
# TODO: opt-in feature to provide dalek crypto APIs
#dalek_crypto = [ "dalek-donna" ]
test = ["cc", "glob"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 2
split-debuginfo = "unpacked"
codegen-units = 1

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[profile.test]
split-debuginfo = "unpacked"

# Runtime dependencies

[dependencies.cty]
version = "0.2.1"

[dependencies.heapless]
version = "0.7.3"
default_features = false

[dependencies.cstr_core]
version = "0.2.4"
default_features = false

[dependencies.getrandom]
version = "0.2.6"
default_features = false
features = [ "custom" ]

[dependencies.trezor-crypto-lib]
path = "../../../../rust-trezor-crypto"
#optional = true
features = [ "u32_backend" ]
default_features = false

# Build dependencies

[build-dependencies.bindgen]
version = "0.59.1"
default_features = false
features = ["runtime"]

# Build dependencies used for linking the test binary

[build-dependencies.cc]
optional = true
version = "1.0.69"

[build-dependencies.glob]
optional = true
version = "0.3.0"

[patch.crates-io]
ed25519-dalek = { path = "../../../../ed25519-dalek" }
